--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -7,19 +7,27 @@ html, body {
   background-color: #FF9000;
 }
 
+.bg-devGreen {
+	background-color: #2B3137;
+}
+
 .login-view {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .login-block {
-  background-color: #EEEEEE;
-  width: 50%;
-  height: 75%;
-  margin-left: 30%;
-  padding-top: 15%;
-  padding-left: 5%;
-  padding-right: 7%;
+	background-color: #EEEEEE;
+    width: 50%;
+    height: 50%;
+    margin-left: 30%;
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 7%;
+    position: absolute;
+    top: 65px;
+    border-radius: 4px;
 }
 
 .login-block label {
