--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,12 +1,12 @@
 
-  <div class="bg-orange login-view">
+  <div class="bg-devGreen login-view">
     <div class="login-block">
       <h1>eComm Online Store</h1>
-      <form name="loginForm" ng-submit="">
+      <form name="loginForm" ng-submit="login(field)">
         <label for="username">Username</label>
-        <input type="text" id="username" class="form-control input-sm" name="username" ng-model="username">
+        <input type="text" id="username" class="form-control input-sm" name="username" ng-model="field.username">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control input-sm" name="password" ng-model="password">
+        <input type="password" id="password" class="form-control input-sm" name="password" ng-model="field.password">
         <button type="submit" class="btn btn-primary float-right" name="button">Login</button>
       </form>
     </div>
