--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -1,6 +1,7 @@
 html, body {
   min-height: 100% !important;
   height: 100%;
+  position: relative;
 }
 
 .bg-orange {
@@ -20,7 +21,7 @@ html, body {
 .login-block {
 	background-color: #EEEEEE;
     width: 50%;
-    height: 50%;
+    height: 60%;
     margin-left: 30%;
     padding-top: 5%;
     padding-left: 5%;
@@ -37,4 +38,35 @@ html, body {
 .login-block .btn-primary {
   float: right;
   margin-top: 15px;
+}
+
+header {
+  height: 15%;
+  background-color: #ccc;
+  position: absolute;
+  width: 100%;
+}
+
+.view-area {
+  height: 85%;
+  padding-top: 80%;
+  width: 100%;
+}
+
+.logo-space img {
+  width: 150px;
+  height: 50px;
+}
+
+.user-actions {
+  list-style: none;
+}
+
+.user-actions li {
+  display: inline;
+}
+
+.cart img {
+  height: 50px;
+  width: 50px;
 }
