--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -1,4 +1,23 @@
 <div ng-include="'partials/header.html'"></div>
 <div class="view-area">
-{{userData.username}}
+  <div class="row display">
+    <div class="col-md-4">
+      <img src="images/shopping_cart.png" alt="">
+      <h4>Product Name</h4>
+      <h5>Price</h5>
+      <span class="pull-right">Add to cart</span>
+    </div>
+    <div class="col-md-4">
+      <img src="images/shopping_cart.png" alt="">
+      <h4>Product Name</h4>
+      <h5>Price</h5>
+      <span class="pull-right">Add to cart</span>
+    </div>
+    <div class="col-md-4">
+      <img src="images/shopping_cart.png" alt="">
+      <h4>Product Name</h4>
+      <h5>Price</h5>
+      <span class="pull-right">Add to cart</span>
+    </div>
+  </div>
 </div>
